--- a/problem1/CMakeLists.txt
+++ b/problem1/CMakeLists.txt
@@ -1,7 +1,9 @@
-cmake_minimum_required(VERSION 3.3)
+cmake_minimum_required(VERSION 3.2)
 project(baseCJK)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
 #add_definitions(-D_USEASM)
+add_definitions(-D_WITH_ENCODE)
+add_definitions(-D_WITH_DECODE)
 set(SOURCE_FILES main.cpp basecjk.cpp basecjk.h)
 add_executable(baseCJK ${SOURCE_FILES})
