--- a/problem2/clientdll/clientdll.vcxproj
+++ b/problem2/clientdll/clientdll.vcxproj
@@ -146,10 +146,12 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\rpcdef.h" />
+    <ClInclude Include="aes.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="aes.cpp" />
     <ClCompile Include="clientdll.cpp" />
     <ClCompile Include="dllmain.cpp">
       <CompileAsManaged Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">false</CompileAsManaged>
